Align all h2.section-heading correctly
Previously this style was only applied to `#moduledoc` h2's.

Also the `left-margin` has been changed to `.3em` to
counteract the `.3em` padding on the anchor tag.

--- a/assets/less/content/general.less
+++ b/assets/less/content/general.less
@@ -144,8 +144,8 @@ td, th {
   }
 }
 
-#moduledoc h2.section-heading {
-  margin: 1.5em 0 .5em .25em;
+h2.section-heading {
+  margin: 1.5em 0 .5em .3em;
 }
 
 .visible-xs {
